syntax = "proto3";

import "app/improving/order/domain/order_context_domain.proto";
import "common_domain.proto";

package app.improving.ordercontext.order;

message Order {
    OrderId orderId = 1;
    OrderInfo info = 2;
    OrderMetaInfo meta = 3;
    OrderStatus status = 4;
}

message OrderState {
    Order order = 1;
}